--- a/web-app/src/app/feature.module.css
+++ b/web-app/src/app/feature.module.css
@@ -1,6 +1,6 @@
 .feature {
     border-style: solid;
-    border-color: blue;
+    border-color: green;
     border-width: 5px;
     background-color: transparent;
 }
