--- a/web-app/src/app/dicetray.module.css
+++ b/web-app/src/app/dicetray.module.css
@@ -36,3 +36,19 @@
     margin-left: 30%;
     width: 40%;
 }
+
+.NudgeButton1, .NudgeButton2 {
+    font-size: 20px;
+    text-align: center;
+    width: 40%;
+}
+
+.NudgeButton1 {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.NudgeButton2 {
+    margin-left: 5%;
+    margin-right: 5%;
+}
