moved position, height, and width styling from Feature.js to feature.module.css

--- a/web-app/src/app/feature.module.css
+++ b/web-app/src/app/feature.module.css
@@ -3,4 +3,7 @@
     border-color: green;
     border-width: 5px;
     background-color: transparent;
+    position: absolute;
+    height: 25px;
+    width: 25px;
 }
