--- a/web-app/src/app/box.module.css
+++ b/web-app/src/app/box.module.css
@@ -1,3 +1,10 @@
-.box {
+.box, .DrainBox {
     position: absolute;
+}
+
+.DrainBox {
+    text-align: center;
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
 }
