--- a/web-app/src/app/seehighscorestray.module.css
+++ b/web-app/src/app/seehighscorestray.module.css
@@ -1,23 +1,14 @@
-.PostScoreTray {
+.SeeHighScoresTray {
     width: 200px;
     border-style: solid;
     border-color: white;
     border-width: 10px;
     background-color: orange;
     left: 550px;
-    top: 600px;
+    top: 490px;
     position: absolute;
     font-size: 32px;
     text-align: center;
-    color: white;
-}
-
-.initialsInput {
-    font-size: 32px;
-    text-align: center;
-    width: 120px;
-}
-
-.scoreSubmitButton {
-    font-size: 28px;
+    text-decoration: underline;
+    color: blue;
 }
